#39
#39 Change .war file name from JasperReportsIntegration.war to jri.war enhancement